# infolang-litellm

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/infolang_litellm/: __init__.py  _format.py  _scope.py  logger.py
tests/: conftest.py  test_config.py  test_format.py  test_live.py  test_pre_call.py  test_resilience.py  test_retain.py  test_scope.py
