[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infolang-litellm"
dynamic = ["version"]
description = "InfoLang semantic memory for LiteLLM — proxy callbacks that recall context pre-call and retain turns post-call."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "InfoLang", email = "engineering@infolang.ai" }]
keywords = ["infolang", "litellm", "semantic-memory", "rag", "proxy", "callback", "llm", "memory"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "infolang>=0.2,<0.3",
  "litellm>=1.72,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.urls]
Homepage = "https://infolang.ai"
Documentation = "https://infolang.ai/docs/integrations/litellm"
Source = "https://github.com/InfoLang-Inc/infolang-litellm"
Issues = "https://github.com/InfoLang-Inc/infolang-litellm/issues"

[tool.hatch.version]
path = "src/infolang_litellm/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/infolang_litellm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "live: hits a real InfoLang endpoint (requires INFOLANG_API_KEY); deselected by default",
]
addopts = "-m 'not live' --cov=infolang_litellm --cov-report=term-missing --cov-branch --cov-fail-under=90"

[tool.coverage.run]
source = ["src/infolang_litellm"]
branch = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/infolang_litellm"]

# LiteLLM pulls numpy transitively; its distributed stubs use 3.12-only syntax
# that mypy cannot parse under python_version 3.11. We don't use numpy directly,
# so skip following it rather than lowering our own strictness.
[[tool.mypy.overrides]]
module = ["numpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
